# Ramulator2

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/addr_mapper/: CMakeLists.txt  addr_mapper.h
src/base/: CMakeLists.txt  base.h  config.cpp  config.h  debug.h  exception.h  factory.cpp  factory.h  param.h  stats.h
src/dram/: CMakeLists.txt  spec.h
src/dram/impl/: HBM2.cpp  LPDDR5.cpp
src/dram/lambdas/: action.h  power.h  preq.h  rowhit.h  rowopen.h
src/dram_controller/: CMakeLists.txt  bh_controller.h  bh_scheduler.h  controller.h  scheduler.h
src/dram_controller/impl/: bh_dram_controller.cpp  prac_dram_controller.cpp
src/dram_controller/impl/plugin/: trace_recorder.cpp
src/dram_controller/impl/plugin/blockhammer/: blockhammer.cpp
src/frontend/: CMakeLists.txt
src/frontend/impl/memory_trace/: loadstore_trace.cpp  readwrite_trace.cpp
src/frontend/impl/processor/bhO3/: bhO3.cpp  bhcore.cpp  bhllc.cpp  bhllc.h
src/frontend/impl/processor/simpleO3/: core.cpp  llc.cpp  llc.h  simpleO3.cpp  trace.cpp
src/memory_system/: CMakeLists.txt
src/translation/: CMakeLists.txt
src/translation/impl/: random_translation.cpp
